test: 부족한 테스트 추가